--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TravelToArmenia",
+  "name": "ogani-arm-travel",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -15,8 +15,10 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-navigation": "^4.4.4",
     "tailwindcss-react-native": "^1.7.10",
     "twrnc": "^3.6.4"
