--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@sanity/client": "^6.4.6",
+    "@sanity/image-url": "^1.0.2",
     "tailwindcss": "^3.3.2"
   },
   "private": true
